@@ -41,7 +41,6 @@ import org.dspace.app.rest.submit.SubmissionService;
 import org.dspace.app.rest.submit.UploadableStep;
 import org.dspace.app.rest.utils.Utils;
 import org.dspace.app.util.SubmissionConfig;
-import org.dspace.app.util.SubmissionConfigReader;
 import org.dspace.app.util.SubmissionConfigReaderException;
 import org.dspace.app.util.SubmissionStepConfig;
 import org.dspace.authorize.AuthorizeException;
@@ -66,6 +65,8 @@ import org.dspace.importer.external.exception.FileMultipleOccurencesException;
 import org.dspace.importer.external.metadatamapping.MetadatumDTO;
 import org.dspace.importer.external.service.ImportService;
 import org.dspace.services.ConfigurationService;
+import org.dspace.submit.factory.SubmissionServiceFactory;
+import org.dspace.submit.service.SubmissionConfigService;
 import org.dspace.util.UUIDUtils;
 import org.dspace.validation.service.ValidationService;
 import org.dspace.versioning.ItemCorrectionService;
@@ -137,10 +138,10 @@ public class WorkspaceItemRestRepository extends DSpaceRestRepository<WorkspaceI
     @Autowired
     private UriListHandlerService uriListHandlerService;
 
-    private SubmissionConfigReader submissionConfigReader;
+    private SubmissionConfigService submissionConfigService;
 
     public WorkspaceItemRestRepository() throws SubmissionConfigReaderException {
-        submissionConfigReader = new SubmissionConfigReader();
+        submissionConfigService = SubmissionServiceFactory.getInstance().getSubmissionConfigService();
     }
 
     @PreAuthorize("hasPermission(#id, 'WORKSPACEITEM', 'READ')")
@@ -310,16 +311,17 @@ public class WorkspaceItemRestRepository extends DSpaceRestRepository<WorkspaceI
             collection = collectionService.findAuthorizedOptimized(context, Constants.ADD).get(0);
         }
 
-        SubmissionConfig submissionConfig = submissionConfigReader.getSubmissionConfigByCollection(collection);
+        SubmissionConfig submissionConfig =
+            submissionConfigService.getSubmissionConfigByCollection(collection);
         List<WorkspaceItem> result = null;
         List<ImportRecord> records = new ArrayList<>();
         try {
             for (MultipartFile mpFile : uploadfiles) {
                 File file = Utils.getFile(mpFile, "upload-loader", "filedataloader");
                 try {
-                    ImportRecord record = importService.getRecord(file, mpFile.getOriginalFilename());
-                    if (record != null) {
-                        records.add(record);
+                    List<ImportRecord> recordsFound = importService.getRecords(file, mpFile.getOriginalFilename());
+                    if (recordsFound != null && !recordsFound.isEmpty()) {
+                        records.addAll(recordsFound);
                         break;
                     }
                 } catch (Exception e) {
@@ -334,11 +336,15 @@ public class WorkspaceItemRestRepository extends DSpaceRestRepository<WorkspaceI
         } catch (Exception e) {
             log.error("Error importing metadata", e);
         }
-        WorkspaceItem source = submissionService.
-            createWorkspaceItem(context, getRequestService().getCurrentRequest());
-        merge(context, records, source);
-        result = new ArrayList<>();
-        result.add(source);
+        result = new ArrayList<>(records.size());
+        for (ImportRecord importRecord : records) {
+            WorkspaceItem source = submissionService.
+                createWorkspaceItem(context, getRequestService().getCurrentRequest());
+
+            merge(context, importRecord, source);
+
+            result.add(source);
+        }
 
         //perform upload of bitstream if there is exact one result and convert workspaceitem to entity rest
         if (!result.isEmpty()) {
@@ -348,18 +354,17 @@ public class WorkspaceItemRestRepository extends DSpaceRestRepository<WorkspaceI
                 //load bitstream into bundle ORIGINAL only if there is one result (approximately this is the
                 // right behaviour for pdf file but not for other bibliographic format e.g. bibtex)
                 if (result.size() == 1) {
+                    ClassLoader loader = this.getClass().getClassLoader();
                     for (int i = 0; i < submissionConfig.getNumberOfSteps(); i++) {
                         SubmissionStepConfig stepConfig = submissionConfig.getStep(i);
-                        ClassLoader loader = this.getClass().getClassLoader();
-                        Class stepClass;
                         try {
-                            stepClass = loader.loadClass(stepConfig.getProcessingClassName());
-                            Object stepInstance = stepClass.newInstance();
+                            Class<?> stepClass = loader.loadClass(stepConfig.getProcessingClassName());
+                            Object stepInstance = stepClass.getConstructor().newInstance();
                             if (UploadableStep.class.isAssignableFrom(stepClass)) {
                                 UploadableStep uploadableStep = (UploadableStep) stepInstance;
                                 for (MultipartFile mpFile : uploadfiles) {
-                                    ErrorRest err = uploadableStep.upload(context,
-                                        submissionService, stepConfig, wi, mpFile);
+                                    ErrorRest err =
+                                        uploadableStep.upload(context, submissionService, stepConfig, wi, mpFile);
                                     if (err != null) {
                                         errors.add(err);
                                     }
@@ -449,7 +454,7 @@ public class WorkspaceItemRestRepository extends DSpaceRestRepository<WorkspaceI
         return authorizationRestUtil.getObject(context, objectId);
     }
 
-    private void merge(Context context, List<ImportRecord> records, WorkspaceItem item) throws SQLException {
+    private void merge(Context context, ImportRecord record, WorkspaceItem item) throws SQLException {
         for (MetadataValue metadataValue : itemService.getMetadata(
             item.getItem(), Item.ANY, Item.ANY, Item.ANY, Item.ANY)) {
             itemService.clearMetadata(context, item.getItem(),
@@ -458,13 +463,11 @@ public class WorkspaceItemRestRepository extends DSpaceRestRepository<WorkspaceI
                 metadataValue.getMetadataField().getQualifier(),
                 metadataValue.getLanguage());
         }
-        for (ImportRecord record : records) {
-            if (record != null && record.getValueList() != null) {
-                for (MetadatumDTO metadataValue : record.getValueList()) {
-                    itemService.addMetadata(context, item.getItem(), metadataValue.getSchema(),
-                        metadataValue.getElement(), metadataValue.getQualifier(), null,
-                        metadataValue.getValue());
-                }
+        if (record != null && record.getValueList() != null) {
+            for (MetadatumDTO metadataValue : record.getValueList()) {
+                itemService.addMetadata(context, item.getItem(), metadataValue.getSchema(),
+                    metadataValue.getElement(), metadataValue.getQualifier(), null,
+                    metadataValue.getValue());
             }
         }
     }
